[gd_scene load_steps=6 format=3 uid="uid://cu71fiowdkvmr"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/callNode.gd" id="1_hul2k"]
[ext_resource type="Texture2D" uid="uid://cf5ef41yo6jl6" path="res://addons/dialogue_nodes/icons/Reload.svg" id="2_u8etb"]
[ext_resource type="Texture2D" uid="uid://buayifvickq2l" path="res://addons/dialogue_nodes/icons/Folder.svg" id="2_w7ejb"]
[ext_resource type="Texture2D" uid="uid://2mg38tjwdqxy" path="res://addons/dialogue_nodes/icons/GuiVisibilityHidden.svg" id="4_golf1"]
[ext_resource type="Texture2D" uid="uid://cj0m8q8hgm0ed" path="res://addons/dialogue_nodes/icons/Add.svg" id="4_hca56"]

[node name="CallNode" type="GraphNode"]
custom_minimum_size = Vector2(200, 180)
offset_right = 192.0
offset_bottom = 183.0
title = "CallNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_hul2k")

[node name="MethodSetup" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MethodLibraryContainer" type="VBoxContainer" parent="MethodSetup"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="FileSelection" type="BoxContainer" parent="MethodSetup/MethodLibraryContainer"]
layout_mode = 2

[node name="FilePath" type="LineEdit" parent="MethodSetup/MethodLibraryContainer/FileSelection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "res://addons/dialogue_nodes/editor/calls.gd"
placeholder_text = "GDScript Resource"

[node name="BrowseButton" type="Button" parent="MethodSetup/MethodLibraryContainer/FileSelection"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("2_w7ejb")

[node name="ReimportButton" type="Button" parent="MethodSetup/MethodLibraryContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 12
text = "Reimport"
icon = ExtResource("2_u8etb")

[node name="HSeparator" type="HSeparator" parent="MethodSetup/MethodLibraryContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="MethodSetup"]
layout_mode = 2

[node name="MethodLibraryButton" type="Button" parent="MethodSetup/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("4_golf1")
icon_alignment = 1

[node name="MethodSelector" type="OptionButton" parent="MethodSetup/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
allow_reselect = true

[node name="ArgumentsSectionContainer" type="HBoxContainer" parent="MethodSetup"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="VSeparator" type="VSeparator" parent="MethodSetup/ArgumentsSectionContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ArgumentsContainer" type="VBoxContainer" parent="MethodSetup/ArgumentsSectionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ReturnsLabel" type="Label" parent="."]
layout_mode = 2
text = "Returns"

[node name="AddReturnButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_hca56")
icon_alignment = 1

[node name="DefaultLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Default Exit"
horizontal_alignment = 2

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a DialogueData Resource"
size = Vector2i(600, 400)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.gd; GDScript Files")

[connection signal="focus_exited" from="MethodSetup/MethodLibraryContainer/FileSelection/FilePath" to="." method="_on_file_path_focus_exited"]
[connection signal="text_submitted" from="MethodSetup/MethodLibraryContainer/FileSelection/FilePath" to="." method="_on_file_path_text_submitted"]
[connection signal="pressed" from="MethodSetup/MethodLibraryContainer/FileSelection/BrowseButton" to="." method="_on_browse_button_pressed"]
[connection signal="pressed" from="MethodSetup/MethodLibraryContainer/ReimportButton" to="." method="_on_reimport_button_pressed"]
[connection signal="toggled" from="MethodSetup/BoxContainer/MethodLibraryButton" to="." method="_on_method_library_button_toggled"]
[connection signal="item_selected" from="MethodSetup/BoxContainer/MethodSelector" to="." method="_on_method_selector_item_selected"]
[connection signal="pressed" from="AddReturnButton" to="." method="_on_add_return_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
